--- a/.gitignore
+++ b/.gitignore
@@ -48,22 +48,12 @@ $RECYCLE.BIN/
 
 
 ### Laravel ###
-vendor/
-node_modules/
+/vendor
+/node_modules
+/public/storage
 Homestead.yaml
 Homestead.json
-
-# Laravel 4 specific
-bootstrap/compiled.php
-app/storage/
-
-# Laravel 5 & Lumen specific
-bootstrap/cache/
-storage/
-.env.*.php
-.env.php
 .env
-.env.example
 
 
 ### SublimeText ###
